--- a/HomeWork/pom.xml
+++ b/HomeWork/pom.xml
@@ -31,7 +31,23 @@
 	<artifactId>spring-context</artifactId>
 	<version>4.0.0.RELEASE</version>
 </dependency>
-         <dependency>
+<dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-aop</artifactId>
+	<version>4.0.0.RELEASE</version>
+</dependency>
+       <dependency>
+	<groupId>org.aspectj</groupId>
+	<artifactId>aspectjrt</artifactId>
+	<version>1.7.4</version>
+</dependency>
+            <dependency>
+	<groupId>org.aspectj</groupId>
+	<artifactId>aspectjweaver</artifactId>
+	<version>1.7.4</version>
+</dependency>
+            
+     <dependency>
 	<groupId>org.hibernate</groupId>
 	<artifactId>hibernate-core</artifactId>
 	<version>4.2.8.Final</version>
